reference-build/apps/employee-todo/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: employee-todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: acrlnehpvmb5.azurecr.io/todo:14
        ports:
        - containerPort: 5000
