reference-build/apps/employee-todo/backend-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: backend-service
  namespace: employee-todo
subsets:
- addresses:
  - ip: 10.0.3.4
  ports:
  - port: 8000
