reference-build/apps/employee-todo/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: employee-todo
spec:
  ports:
  - port: 8000
    targetPort: 8000
