reference-build/apps/employee-todo/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: employee-todo
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
