reference-build/apps/employee-todo/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: employee-todo
spec:
  selector:
    app: todo
  ports:
  - port: 5000
    targetPort: 5000
