reference-build/apps/employee-todo/ingress-frontend-todo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend-todo
  namespace: employee-todo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /emp(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /to-do(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: todo-service
            port:
              number: 5000
